feat: init changes

--- a/.js.env.example
+++ b/.js.env.example
@@ -17,7 +17,7 @@ export MM_FOX_CODE="EXAMPLE_FOX_CODE"
 # API key at https://infura.io in order to connect to main and test nets.
 # More info: https://github.com/MetaMask/metamask-mobile/issues/1984
 
-export MM_INFURA_PROJECT_ID="null"
+export MM_INFURA_PROJECT_ID="603c60bf43a945e0b196a08318f6732e"
 export IGNORE_BOXLOGS_DEVELOPMENT="false"
 export MM_SENTRY_DSN=""
 
@@ -34,7 +34,7 @@ export MM_TEST_ACCOUNT_ADDRESS=""
 
 
 # Wallet connect project id -- should be v2 compatible
-export WALLET_CONNECT_PROJECT_ID=""
+export WALLET_CONNECT_PROJECT_ID="79f1cc54dc2d314bb5d9bb205a86780b"
 
 # Optional: SDK Remote Communication url (for testing with your local socket server)
 # export SDK_COMMLAYER_URL="http://{YOUR_LOCAL_IP}
